scripts/nullaway/original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8.txt
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/Weight.java:97: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/creature/Creature.java:617: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/creature/Anchor.java:44: error: [NullAway] initializer method does not guarantee @NonNull field item (line 149) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Anchor(Creature holder, String name, Item item)
	       ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/creature/Anchor.java:68: error: [NullAway] initializer method does not guarantee @NonNull field item (line 149) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Anchor(Creature holder, String name) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/creature/Anchor.java:85: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		this(holder, null, item);
		             ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/creature/Anchor.java:268: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			((ItemImplementation)getItem()).setParent(null);
			                                          ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/creature/Anchor.java:269: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.item = null;
		          ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/creature/Anchor.java:315: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		setItem(null);
		        ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/creature/Anchor.java:317: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			((ItemImplementation)item).setParent(null);
			                                     ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/ItemImplementation.java:37: error: [NullAway] initializer method does not guarantee @NonNull field parent (line 164) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	protected ItemImplementation(long id, Weight weight, int value){
	          ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/ItemImplementation.java:58: error: [NullAway] initializer method does not guarantee @NonNull field parent (line 164) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	protected ItemImplementation(Weight weight){
	          ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/ItemImplementation.java:232: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/Container.java:42: error: [NullAway] initializer method does not guarantee @NonNull field capacity (line 66) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	protected Container(long id, Weight weight, Weight capacity, int value) {
	          ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/Container.java:335: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			((ItemImplementation)item).setParent(null);
			                                     ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/Container.java:336: error: [NullAway] dereferenced expression content.get(item.getId()) is @Nullable
		content.get(item.getId()).remove(item);
		                         ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/test/AnchorTest.java:92: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		assertFalse(a1.canAddItem(null));
		                          ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/test/ArmorTest.java:23: error: [NullAway] initializer method does not guarantee @NonNull field armor2 (line 18) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public void setUp() throws Exception {
	            ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/test/WeightTest.java:43: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		assertEquals(0, kg1000.compareTo(null));
		                                 ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/test/ItemImplementationTest.java:17: error: [NullAway] @NonNull static field backpack1 not initialized
	static BackPack backpack1, backpack2;
	                ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/test/ItemImplementationTest.java:17: error: [NullAway] @NonNull static field backpack2 not initialized
	static BackPack backpack1, backpack2;
	                           ^
    (see http://t.uber.com/nullaway )
../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/test/ItemImplementationTest.java:124: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		assertTrue(item1.canHaveAsParent(null));
		                                 ^
    (see http://t.uber.com/nullaway )
Note: ../original/url55e48746be_isostorm_RPGame_tgz-pJ8-rpg_MainJ8/src/rpg/item/Weight.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
21 errors
